--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,16 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation(platform('org.junit:junit-bom:5.9.1'))
+	testImplementation('org.junit.jupiter:junit-jupiter')
+	
+}
+
+test {
+	useJUnitPlatform()
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
 }
 
 tasks.named('test') {
