--- a/build.gradle
+++ b/build.gradle
@@ -15,15 +15,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation(platform('org.junit:junit-bom:5.9.1'))
-	testImplementation('org.junit.jupiter:junit-jupiter')
 	
 }
 
-test {
+tasks.named('test') {
 	useJUnitPlatform()
-	testLogging {
-		events "passed", "skipped", "failed"
-	}
 }
+
 
