--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.jpa.hibernate.ddl-auto=create-drop
-
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
