Create Command Invokable infrastructure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=2023a.Assaf.Ariely
 server.port=8082
 server.error.include-message=always
 
+command.defualt=echo
+
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
 
 spring.jpa.show-sql=true
@@ -11,3 +13,6 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
+
+
+logging.level.demo.superAppInvocables.EchoCommand=debug
