--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=2023a.Assaf.Ariely
 server.port=8082
 server.error.include-message=always
 
-command.defualt=echo
+command.defualt=defaultCommand
 
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
 
