--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,14 @@ command.defualt=defaultCommand
 
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
+#H2
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=create-drop
 
-
-logging.level.demo.superAppInvocables.EchoCommand=debug
+#MYSQL
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/integrative
+spring.datasource.username=root
+spring.datasource.password = integrative
+spring.jpa.hibernate.ddl-auto=update
