--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	runtimeOnly 'com.h2database:h2'
-	
+	//runtimeOnly 'com.h2database:h2'  //h2 config
+	 runtimeOnly 'com.mysql:mysql-connector-j' //mysql config
 }
 
 tasks.named('test') {
