--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappi
 #MYSQL
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/integrative
 spring.datasource.username=root
-spring.datasource.password = Ronlulumysql
+spring.datasource.password = integrative
 spring.jpa.hibernate.ddl-auto=update
