--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,16 @@ command.defualt=defaultCommand
 
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
 
+	
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 #H2
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.h2.console.enabled=true
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #MYSQL
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/integrative
-spring.datasource.username=root
-spring.datasource.password = integrative
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/integrative
+#spring.datasource.username=root
+#spring.datasource.password = integrative
+#spring.jpa.hibernate.ddl-auto=update
