--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ command.defualt=defaultCommand
 
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
 
-	
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 #H2
 spring.datasource.url=jdbc:h2:mem:testdb
