--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,17 +6,19 @@ command.defualt=defaultCommand
 
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
 
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.jdbc.time_format=yyyy-MM-dd'T'HH:mm:ssXXX
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 #H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 #MYSQL
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/integrative
-#spring.datasource.username=root
-#spring.datasource.password = integrative
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/integrative
+spring.datasource.username=root
+spring.datasource.password = integrative
+spring.jpa.hibernate.ddl-auto=update
