--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 #MYSQL
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/integrative
-#spring.datasource.username=root
-#spring.datasource.password = integrative
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/integrative
+spring.datasource.username=root
+spring.datasource.password = integrative
+spring.jpa.hibernate.ddl-auto=update
