Added two SuperAppObject in SuperAppInitializer for Weather&ChatGPT reqeusts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ command.defualt=defaultCommand
 
 scooter.defualtid=123456
 
+weather.defualtid=807060
+
+chatgpt.defualtid=050666
+
 miniappuser.defualtemail=initMiniAppUser@gmail.com
 
 lime.header.key=Authorization
