--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,12 +30,12 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 #H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 #MYSQL
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/integrative
-#spring.datasource.username=root
-#spring.datasource.password = integrative
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/integrative
+spring.datasource.username=root
+spring.datasource.password = integrative
+spring.jpa.hibernate.ddl-auto=update
