moving api keys to properties, and fixing initializer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,8 @@ lime.header.value=Bearer eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX3Rva2VuIjoiM0o1SlczQldCSU
 tier.header.key=X-Api-Key
 tier.header.value=bpEUTJEBTf74oGRWxaIcW7aeZMzDDODe1yBoSxi2
 
-
+chatgpt.apiKey=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
+weather.apiKey=639005825020473197c185446230301
 
 
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
